--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <button id="startBtn">Start</button>
         <button id="resetBtn">Reset</button>
         <button id="themeToggle">Dark</button>
+        <input type="file" id="fileLoader" accept=".txt,.md,.json" hidden>
+        <button id="fileLoaderBtn">Upload File</button>
+
     </div>
 
     <!-- Hidden audio player -->
