--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <header>
             <h1>Gõ Chính Tả - Phát Âm Khi Bắt Đầu Từ</h1>
-            <p class="subtitle">Gõ chính xác đoạn văn bản - Tự động cuộn theo nội dung</p>
+            <p class="subtitle">Phát triển là phải để người dân sống vui, không lo hết tiền hay ốm đau</p>
         </header>
 
         <div class="content">
@@ -130,8 +130,7 @@
         <button id="fileLoaderBtn" class="floating-btn">Upload File</button>
         <button id="dictationBtn" class="floating-btn">🎧 Dictation</button>
         <div class="dictation-volume">
-            <span class="volume-icon">🔊</span>
-            <input type="range" id="dictationVolume" min="0" max="5" step="0.1" value="1">
+            <input type="range" id="dictationVolume" min="0" max="5" step="0.1" value="2.5">
         </div>
     </div>
 
