--- a/dictation.html
+++ b/dictation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dictation 🎧</title>
+    <title>Idm Dictation</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -12,134 +12,145 @@
 <body>
     <div class="container">
         <header>
-            <h1>Dictation</h1>
-            <p class="subtitle">Nghe – gõ theo audio, hỗ trợ tooltip & blind mode</p>
+            <h1>Dictation Practice</h1>
+            <p class="subtitle">Nghe kỹ - Gõ chính xác</p>
         </header>
 
-        <div class="content">
-            <div class="stats">
-                <div class="stat-item">
-                    <div class="stat-value" id="accuracy">100%</div>
-                    <div class="stat-label">Độ chính xác</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-value" id="wpm">0</div>
-                    <div class="stat-label">Từ/phút</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-value" id="time">0s</div>
-                    <div class="stat-label">Thời gian</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-value" id="errors">0</div>
-                    <div class="stat-label">Lỗi</div>
-                </div>
+        <!-- Stats: Thêm lại Time và Error -->
+        <div class="stats">
+            <div class="stat-item">
+                <div class="stat-value" id="accuracy">100%</div>
+                <div class="stat-label">Acc</div>
+            </div>
+            <div class="stat-item">
+                <div class="stat-value" id="wpm">0</div>
+                <div class="stat-label">WPM</div>
+            </div>
+            <div class="stat-item">
+                <div class="stat-value" id="time">0s</div>
+                <div class="stat-label">Time</div>
+            </div>
+            <div class="stat-item">
+                <div class="stat-value" id="errors">0</div>
+                <div class="stat-label">Err</div>
             </div>
 
-            <div class="text-display-container" id="textContainer">
-                <div class="text-display" id="textDisplay"></div>
-            </div>
+        </div>
 
-            <div class="input-area">
-                <textarea id="textInput" placeholder="Nghe và gõ lại tại đây..."></textarea>
-            </div>
+        <div class="text-display-container" id="textContainer">
+            <div class="text-display" id="textDisplay"></div>
+        </div>
 
-            <div class="settings">
+        <div class="input-area">
+            <textarea id="textInput"></textarea>
+        </div>
+
+        <!-- TOOLBAR -->
+        <div class="toolbar">
+            <div class="toolbar-left settings-group">
+                <div class="toggle-container" title="Chế độ Tối/Sáng">
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="themeToggle">
+                        <span class="slider"></span>
+                    </label>
+                    <span>Dark</span>
+                </div>
                 <div class="toggle-container">
                     <label class="toggle-switch">
                         <input type="checkbox" id="soundToggle" checked>
                         <span class="slider"></span>
                     </label>
-                    <label for="soundToggle">Click</label>
+                    <span>Click</span>
                 </div>
-
                 <div class="toggle-container">
                     <label class="toggle-switch">
                         <input type="checkbox" id="autoPronounceToggle" checked>
                         <span class="slider"></span>
                     </label>
-                    <label for="autoPronounceToggle">Speak Word</label>
+                    <span>Speak</span>
                 </div>
-
-                <div class="toggle-container">
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="autoTooltipToggle" checked>
-                        <span class="slider"></span>
-                    </label>
-                    <label for="autoTooltipToggle">Tooltip</label>
-                </div>
-
                 <div class="toggle-container">
                     <label class="toggle-switch">
                         <input type="checkbox" id="blindModeToggle">
                         <span class="slider"></span>
                     </label>
-                    <label for="blindModeToggle">Blind Mode</label>
+                    <span>Blind</span>
                 </div>
+
+                <!-- Dictation không có tooltip toggle vì mặc định thường dùng blind mode hoặc nghe -->
+                <div class="toggle-container">
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="autoTooltipToggle" checked>
+                        <span class="slider"></span>
+                    </label>
+                    <span>Tooltip</span>
+                </div>
+
+                <!-- ACTION TOGGLE (Thay cho Button) -->
+                <div class="toggle-container" title="Bắt đầu / Dừng bài tập">
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="actionToggle">
+                        <span class="slider"></span>
+                    </label>
+                    <span id="actionLabel" style="font-size: 0.9rem; margin-right: 8px;">Start</span>
+                </div>
+
+                <!-- Thanh volume -->
+                <div class="mini-volume-control" title="Âm lượng đọc">
+                    <input type="range" id="dictationVolume" min="0" max="5" step="0.1" value="2.5">
+                </div>
+
+                
             </div>
         </div>
 
         <footer>
-            <!-- Playlist dictation: tên file txt như d01.txt -->
-            <select id="playlist">
-                <option value="d01.txt">d01.txt</option>
-                <!-- sau này bạn thêm d02.txt, d03.txt... -->
-            </select>
-            <label for="difficulty">> </label>
+            <button id="dictationBtn" class="btn-icon">📂 Load</button>
+            <select id="playlist"></select>
+            <span>/</span>
             <select id="difficulty">
-                <option value="Full">Full</option>
+                <option value="Full">Full Text</option>
             </select>
+            <button class="btn-icon" onclick="window.location.href='index.html'">📖 Reading</button>
         </footer>
     </div>
 
-    <div id="globalTooltip"></div>
-
-    <div class="floating-buttons">
-        <button id="startBtn" class="floating-btn">Start</button>
-        <button id="resetBtn" class="floating-btn">Reset</button>
-        <button id="themeToggle" class="floating-btn">Dark</button>
-
-        <!-- Replay current segment -->
-        <button id="dictationReplayBtn" class="floating-btn hidden">🔄 Replay</button>
-        <button id="dictationBtn" class="floating-btn">📂 Load</button>
-
-
-        <!-- Volume -->
-        <div class="dictation-volume">
-            <input type="range" id="dictationVolume" min="0" max="5" step="0.1" value="2.5">
-        </div>
-
-        <!-- Quay về trang gõ -->
-        <button class="floating-btn turnBtn" onclick="window.location.href='index.html'">📘 Reading</button>
-    </div>
-
-    <!-- MODAL DICTATION (upload file giống bản cũ) -->
+    <!-- MODAL -->
     <div id="dictationModal" class="modal hidden">
-        <div class="modal-content">
-            <h2>Dictation từ file</h2>
+        <div class="modal-content" style="padding: 30px; width: 400px; text-align: center;">
+            <h2 style="margin-bottom: 20px;">Upload Dictation</h2>
 
-            <p>Chọn file TXT (hoặc TSV) chứa time + câu:</p>
-            <input type="file" id="dictationSubInput" accept=".txt,.tsv" />
+            <div style="text-align: left; margin-bottom: 15px;">
+                <label style="display:block; margin-bottom: 5px; font-size: 0.9rem; color: var(--text-muted)">1.
+                    Subtitle File (.txt/tsv)</label>
+                <input type="file" id="dictationSubInput" accept=".txt,.tsv"
+                    style="width: 100%; padding: 8px; border: 1px solid var(--border); border-radius: 4px;">
+            </div>
 
-            <p style="margin-top:10px;">Chọn file MP3 tương ứng:</p>
-            <input type="file" id="dictationAudioInput" accept="audio/*" />
+            <div style="text-align: left; margin-bottom: 20px;">
+                <label style="display:block; margin-bottom: 5px; font-size: 0.9rem; color: var(--text-muted)">2. Audio
+                    File (.mp3)</label>
+                <input type="file" id="dictationAudioInput" accept="audio/*"
+                    style="width: 100%; padding: 8px; border: 1px solid var(--border); border-radius: 4px;">
+            </div>
 
-            <div style="margin-top:12px;">
-                <label>
-                    <input type="checkbox" id="dictationBlindMode" />
-                    Blind mode cho Dictation
+            <div style="margin-bottom: 20px; text-align: left;">
+                <label class="toggle-container">
+                    <input type="checkbox" id="dictationBlindMode" style="margin-right: 8px;">
+                    Blind Mode for Dictation
                 </label>
             </div>
 
-            <div class="modal-actions">
-                <button id="dictationCancelBtn" class="modal-btn">Huỷ</button>
-                <button id="dictationStartBtn" class="modal-btn primary" disabled>Bắt đầu</button>
+            <div style="display: flex; gap: 10px; justify-content: center;">
+                <button id="dictationCancelBtn" class="btn-icon">Cancel</button>
+                <button id="dictationStartBtn" class="btn-icon btn-primary" disabled>Start Dictation</button>
             </div>
         </div>
     </div>
 
-
+    <div id="globalTooltip"></div>
     <audio id="player" class="hidden"></audio>
+    <button id="dictationReplayBtn" class="hidden"></button>
 
     <script type="module" src="scripts/dictation-app.js"></script>
     <script type="module" src="scripts/dictation.js"></script>
@@ -147,7 +158,6 @@
         import { initDictation } from "./scripts/dictation.js";
         initDictation();
     </script>
-
 </body>
 
 </html>
