--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Idm Typing</title>
+    <title>Idm Typing Master</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,11 +12,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>Reading Practice</h1>
+            <h1 id="pageTitle">Reading Practice</h1>
             <p class="subtitle">Tập trung - Thư giãn - Phát triển</p>
         </header>
 
-        <!-- Stats: Đã thêm lại #errors để tránh lỗi JS -->
+        <!-- Stats Bar -->
         <div class="stats">
             <div class="stat-item">
                 <div class="stat-value" id="accuracy">100%</div>
@@ -38,7 +38,7 @@
 
         <!-- Text Display -->
         <div class="text-display-container" id="textContainer">
-            <div class="text-display" id="textDisplay">Loading text...</div>
+            <div class="text-display" id="textDisplay">Loading...</div>
         </div>
 
         <!-- Hidden Input -->
@@ -48,14 +48,19 @@
 
         <!-- TOOLBAR -->
         <div class="toolbar">
-            <!-- Left: Settings -->
             <div class="toolbar-left settings-group">
-                <div class="toggle-container" title="Chế độ Tối/Sáng">
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="themeToggle">
-                        <span class="slider"></span>
-                    </label>
-                    <span>Dark</span>
+                <!-- Trong file index.html, thay thế đoạn Toggle Dark/Light bằng đoạn này -->
+                <div class="toggle-container" title="Chọn giao diện">
+                    <select id="themeSelect" style="width: 110px; padding: 4px 8px;">
+                        <option value="light">Default</option>
+                        <option value="dark">Dark</option>
+                        <option value="ocean">Ocean</option>
+                        <option value="forest">Forest</option>
+                        <option value="coffee">Coffee</option>
+                        <option value="cyberpunk">Cyberpunk</option>
+                        <option value="dracula">Dracula</option>
+                        <option value="idm">Idm</option>
+                    </select>
                 </div>
                 <div class="toggle-container" title="Âm thanh gõ phím">
                     <label class="toggle-switch">
@@ -89,34 +94,84 @@
                     <span>Tooltip</span>
                 </div>
 
-                <!-- ACTION TOGGLE (Thay cho Button) -->
-                <div class="toggle-container" title="Bắt đầu / Dừng bài tập">
+                <!-- Dictation Volume (Hidden by default in Reading) -->
+                <div class="mini-volume-control hidden" id="volumeControl" title="Âm lượng đọc">
+                    <input type="range" id="dictationVolume" min="0" max="5" step="0.1" value="2.5">
+                </div>
+
+                <!-- ACTION TOGGLE -->
+                <div class="toggle-container" title="Bắt đầu / Dừng bài tập" style="margin-left: auto;">
                     <label class="toggle-switch">
                         <input type="checkbox" id="actionToggle">
                         <span class="slider"></span>
                     </label>
                     <span id="actionLabel" style="font-size: 0.9rem; margin-right: 8px;">Start</span>
                 </div>
-                
+
+                <!-- Replay Button (Dictation only) -->
+                <button id="dictationReplayBtn" class="btn-icon hidden" title="Nghe lại đoạn này">↺</button>
             </div>
         </div>
 
         <footer>
             <!-- Input file ẩn -->
-            <input type="file" id="fileLoader" accept=".txt,.md,.json" hidden>
-            <!-- Nút Load gắn sự kiện click vào input trên -->
+            <input type="file" id="fileLoader" accept=".txt,.md,.json,.tsv,.mp3" hidden multiple>
+            <!-- Nút Load -->
             <button id="fileLoaderBtn" class="btn-icon">📂 Load</button>
+
             <select id="playlist"></select>
-            <span>/</span>
+            <span style="opacity: 0.5">/</span>
+
+            <!-- Difficulty Select (Reading) -->
             <select id="difficulty"></select>
-            <button class="btn-icon" onclick="window.location.href='dictation.html'">🎧 Listening</button>
+
+            <!-- Mode Switch Button -->
+            <button id="modeSwitchBtn" class="btn-icon" style="margin-left: auto; border-color: var(--accent-color);">
+                🎧 Go to Dictation
+            </button>
         </footer>
+    </div>
+
+    <!-- DICTATION MODAL (Hidden by default) -->
+    <div id="dictationModal" class="modal hidden">
+        <div class="modal-content" style="padding: 30px; width: 400px; text-align: center;">
+            <h2 style="margin-bottom: 20px;">Upload Dictation</h2>
+
+            <div style="text-align: left; margin-bottom: 15px;">
+                <label style="display:block; margin-bottom: 5px; font-size: 0.9rem; color: var(--text-muted)">1.
+                    Subtitle (.txt/tsv)</label>
+                <input type="file" id="dictationSubInput" accept=".txt,.tsv"
+                    style="width: 100%; padding: 8px; border: 1px solid var(--border-color); border-radius: 4px; background: var(--section-bg); color: var(--text-primary);">
+            </div>
+
+            <div style="text-align: left; margin-bottom: 20px;">
+                <label style="display:block; margin-bottom: 5px; font-size: 0.9rem; color: var(--text-muted)">2. Audio
+                    (.mp3)</label>
+                <input type="file" id="dictationAudioInput" accept="audio/*"
+                    style="width: 100%; padding: 8px; border: 1px solid var(--border-color); border-radius: 4px; background: var(--section-bg); color: var(--text-primary);">
+            </div>
+
+            <div style="margin-bottom: 20px; text-align: left;">
+                <label class="toggle-container">
+                    <input type="checkbox" id="dictationBlindMode" style="margin-right: 8px;">
+                    Blind Mode for Dictation
+                </label>
+            </div>
+
+            <div style="display: flex; gap: 10px; justify-content: center;">
+                <button id="dictationCancelBtn" class="btn-icon">Cancel</button>
+                <button id="dictationStartBtn" class="btn-icon"
+                    style="background: var(--accent-gradient); color: white; border: none;" disabled>Start
+                    Dictation</button>
+            </div>
+        </div>
     </div>
 
     <div id="globalTooltip"></div>
     <audio id="player" class="hidden"></audio>
 
-    <script type="module" src="scripts/app.js"></script>
+    <!-- MAIN SCRIPT -->
+    <script type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
