--- a/merge.html
+++ b/merge.html
@@ -1,251 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Audacity Label + Dialogue Merger</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #1e1e1e;
-        color: #f5f5f5;
-        padding: 20px;
-        line-height: 1.5;
-    }
-    h1 {
-        margin-bottom: 10px;
-    }
-    p {
-        color: #ccc;
-        font-size: 14px;
-    }
-    .dropzone {
-        border: 2px dashed #666;
-        padding: 25px;
-        text-align: center;
-        margin: 15px 0;
-        background: #2b2b2b;
-        cursor: pointer;
-        border-radius: 8px;
-        transition: 0.2s;
-    }
-    .dropzone.dragover {
-        border-color: #4caf50;
-        background: #333;
-    }
-    .dropzone b {
-        color: #fff;
-    }
-    button {
-        padding: 10px 18px;
-        font-size: 15px;
-        cursor: pointer;
-        background: #4caf50;
-        border: none;
-        border-radius: 6px;
-        color: #fff;
-        margin-top: 10px;
-    }
-    button:disabled {
-        background: #555;
-        cursor: not-allowed;
-    }
-    #output {
-        margin-top: 20px;
-        white-space: pre-wrap;
-        background: #111;
-        padding: 10px;
-        border-radius: 6px;
-        max-height: 300px;
-        overflow-y: auto;
-        font-size: 13px;
-    }
-    .status {
-        font-size: 13px;
-        margin-top: 5px;
-        color: #aaa;
-    }
-</style>
+    <meta charset="UTF-8">
+    <title>Audacity Timestamp + Dialogue Merger</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #1e1e1e;
+            color: #f5f5f5;
+            padding: 20px;
+            line-height: 1.5;
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        p {
+            color: #ccc;
+            font-size: 14px;
+        }
+
+        .dropzone {
+            border: 2px dashed #666;
+            padding: 25px;
+            text-align: center;
+            margin: 15px 0;
+            background: #2b2b2b;
+            cursor: pointer;
+            border-radius: 8px;
+            transition: 0.2s;
+        }
+
+        .dropzone.dragover {
+            border-color: #4caf50;
+            background: #333;
+        }
+
+        button {
+            padding: 10px 18px;
+            font-size: 15px;
+            cursor: pointer;
+            background: #4caf50;
+            border: none;
+            border-radius: 6px;
+            color: #fff;
+            margin-top: 10px;
+        }
+
+        button:disabled {
+            background: #555;
+            cursor: not-allowed;
+        }
+
+        #output,
+        #errors {
+            margin-top: 15px;
+            white-space: pre-wrap;
+            padding: 10px;
+            border-radius: 6px;
+            font-size: 13px;
+            max-height: 260px;
+            overflow-y: auto;
+        }
+
+        #output {
+            background: #111;
+        }
+
+        #errors {
+            background: #331111;
+            color: #ff9999;
+        }
+    </style>
 </head>
+
 <body>
 
-<h1>Audacity Timestamp + Dialogue Merger</h1>
-<p>
-    1) Kéo thả <b>Labels.txt</b> (Audacity, không dòng trống).<br>
-    2) Kéo thả <b>Dialogue.txt</b> (có thể có dòng trống).<br>
-    3) Bấm <b>Merge</b> để tải xuống <code>final.txt</code>.<br>
-    Dòng trống trong <code>Dialogue.txt</code> sẽ được giữ lại đúng vị trí.
-</p>
+    <h1>Audacity Timestamp + Dialogue Merger</h1>
+    <p>
+        1) Kéo thả <b>Labels.txt</b> (Audacity).<br>
+        2) Kéo thả <b>Dialogue.txt</b> (giữ dòng trống).<br>
+        3) Bật/tắt Speaker Mode nếu muốn.<br>
+        4) Bấm <b>Merge</b> để tải <code>final.txt</code>.<br>
+    </p>
 
-<div id="labelDrop" class="dropzone">
-    Thả <b>Labels.txt</b> (Audacity) vào đây
-    <div id="labelStatus" class="status">Chưa có file</div>
-</div>
+    <div id="labelDrop" class="dropzone">
+        Thả <b>Labels.txt</b> vào đây
+        <div id="labelStatus" class="status">Chưa có file</div>
+    </div>
 
-<div id="dialogDrop" class="dropzone">
-    Thả <b>Dialogue.txt</b> vào đây
-    <div id="dialogStatus" class="status">Chưa có file</div>
-</div>
+    <div id="dialogDrop" class="dropzone">
+        Thả <b>Dialogue.txt</b> vào đây
+        <div id="dialogStatus" class="status">Chưa có file</div>
+    </div>
 
-<button id="mergeBtn" disabled>Merge &amp; Download final.txt</button>
+    <label>
+        <input type="checkbox" id="speakerMode" checked> Bật chế độ Speaker
+    </label>
 
-<pre id="output" placeholder="Preview output..."></pre>
+    <button id="mergeBtn" disabled>Merge & Download final.txt</button>
 
-<script>
-let labels = [];         // {start, end}
-let dialogues = [];      // tất cả dòng (kể cả trống)
-let cleanDialogue = [];  // chỉ các dòng có chữ
-let emptyLines = [];     // index dòng trống
+    <div id="errors"></div>
+    <pre id="output"></pre>
 
-// -----------------------
-// File Reader Helper
-// -----------------------
-function readFileAsync(file) {
-    return new Promise((resolve) => {
-        const reader = new FileReader();
-        reader.onload = () => resolve(reader.result);
-        reader.readAsText(file);
-    });
-}
+    <script>
+        let labels = [];
+        let dialogues = [];
+        let cleanDialogue = [];
+        let emptyLines = [];
+        let errors = [];
 
-// -----------------------
-// Dropzone setup
-// -----------------------
-function setupDropzone(id, statusId, callback) {
-    const zone = document.getElementById(id);
-    const status = document.getElementById(statusId);
-
-    zone.addEventListener("dragover", (e) => {
-        e.preventDefault();
-        zone.classList.add("dragover");
-    });
-
-    zone.addEventListener("dragleave", () => {
-        zone.classList.remove("dragover");
-    });
-
-    zone.addEventListener("drop", async (e) => {
-        e.preventDefault();
-        zone.classList.remove("dragover");
-
-        const file = e.dataTransfer.files[0];
-        if (!file) return;
-
-        const text = await readFileAsync(file);
-        callback(text);
-
-        zone.innerHTML = zone.innerHTML.split("<div")[0]; // giữ text chính
-        zone.insertAdjacentHTML(
-            "beforeend",
-            `<div id="${statusId}" class="status"><b>${file.name}</b> loaded ✔</div>`
-        );
-
-        enableMergeIfReady();
-    });
-}
-
-// -----------------------
-// Parse Audacity label file
-// Format: start[tab/space]end[tab/space]optional label
-// -----------------------
-function parseLabels(text) {
-    labels = text
-        .split(/\r?\n/)
-        .filter(line => line.trim().length > 0)
-        .map(line => {
-            const parts = line.trim().split(/\s+/);
-            return {
-                start: parts[0],
-                end: parts[1]
-            };
-        });
-
-    console.log("Parsed labels:", labels);
-}
-
-// -----------------------
-// Parse dialogue file (KEEP EMPTY LINES POSITION)
-// -----------------------
-function parseDialogue(text) {
-    const lines = text.split(/\r?\n/);
-
-    dialogues = lines;
-    cleanDialogue = [];
-    emptyLines = [];
-
-    lines.forEach((line, index) => {
-        if (line.trim() === "") {
-            emptyLines.push(index);          // lưu index dòng trống
-        } else {
-            cleanDialogue.push(line);        // chỉ lấy câu có chữ
+        // -----------------------
+        // File Reader
+        // -----------------------
+        function readFileAsync(file) {
+            return new Promise((resolve) => {
+                const reader = new FileReader();
+                reader.onload = () => resolve(reader.result);
+                reader.readAsText(file);
+            });
         }
-    });
 
-    console.log("Dialogue lines (raw):", dialogues);
-    console.log("Clean dialogue:", cleanDialogue);
-    console.log("Empty line indexes:", emptyLines);
-}
+        // -----------------------
+        // Dropzones
+        // -----------------------
+        function setupDropzone(id, statusId, callback) {
+            const zone = document.getElementById(id);
 
-// -----------------------
-// Enable merge if ready
-// -----------------------
-function enableMergeIfReady() {
-    const btn = document.getElementById("mergeBtn");
-    if (labels.length > 0 && cleanDialogue.length > 0) {
-        btn.disabled = false;
-    }
-}
+            zone.addEventListener("dragover", e => {
+                e.preventDefault();
+                zone.classList.add("dragover");
+            });
 
-// -----------------------
-// Merge logic WITH EMPTY LINE RESTORE
-// -----------------------
-function mergeFiles() {
-    let merged = [];
+            zone.addEventListener("dragleave", () => zone.classList.remove("dragover"));
 
-    const count = Math.min(labels.length, cleanDialogue.length);
+            zone.addEventListener("drop", async e => {
+                e.preventDefault();
+                zone.classList.remove("dragover");
 
-    // Bước 1 — ghép timestamp + các câu có chữ (bỏ dòng trống)
-    for (let i = 0; i < count; i++) {
-        merged.push(`${labels[i].start}\t${labels[i].end}\t${cleanDialogue[i]}`);
-    }
+                const file = e.dataTransfer.files[0];
+                if (!file) return;
 
-    // Bước 2 — chèn lại các dòng trống đúng vị trí dựa trên index của Dialogue.txt gốc
-    emptyLines.forEach(idx => {
-        // Giới hạn: chỉ chèn nếu idx <= độ dài hiện tại (tránh nhảy quá xa)
-        if (idx <= merged.length) {
-            merged.splice(idx, 0, "");
-        } else {
-            // nếu index lớn hơn độ dài hiện tại, thêm dòng trống vào cuối
-            merged.push("");
+                const text = await readFileAsync(file);
+                callback(text);
+
+                document.getElementById(statusId).innerHTML =
+                    `<b>${file.name}</b> loaded ✔`;
+
+                validateAll();
+            });
         }
-    });
 
-    const out = merged.join("\n");
+        // -----------------------
+        // Parse Labels
+        // -----------------------
+        function parseLabels(text) {
+            labels = text
+                .split(/\r?\n/)
+                .filter(x => x.trim())
+                .map(line => {
+                    const parts = line.trim().split(/\s+/);
+                    return { start: parts[0], end: parts[1] };
+                });
+        }
 
-    document.getElementById("output").textContent = out;
-    downloadFile(out, "final.txt");
-}
+        // -----------------------
+        // Parse Dialogue
+        // -----------------------
+        function parseDialogue(text) {
+            const lines = text.split(/\r?\n/);
 
-// -----------------------
-// Download helper
-// -----------------------
-function downloadFile(data, filename) {
-    const blob = new Blob([data], { type: "text/plain" });
-    const url = URL.createObjectURL(blob);
+            dialogues = lines;
+            cleanDialogue = [];
+            emptyLines = [];
+            let isStartOfBlock = true;
 
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = filename;
-    a.click();
+            const speakerEnabled = document.getElementById("speakerMode").checked;
 
-    URL.revokeObjectURL(url);
-}
+            lines.forEach((line, index) => {
+                const trimmed = line.trim();
 
-// -----------------------
-// Init
-// -----------------------
-setupDropzone("labelDrop", "labelStatus", parseLabels);
-setupDropzone("dialogDrop", "dialogStatus", parseDialogue);
-document.getElementById("mergeBtn").onclick = mergeFiles;
-</script>
+                if (trimmed === "") {
+                    emptyLines.push(index);
+                    isStartOfBlock = true;
+                    return;
+                }
+
+                let speaker = "";
+                let textContent = trimmed;
+
+                if (speakerEnabled && isStartOfBlock) {
+                    const match = trimmed.match(/^([^:]+):\s*(.*)$/);
+                    if (match) {
+                        speaker = match[1].trim();
+                        textContent = match[2].trim();
+                    }
+                } else {
+                    // Warning: dòng chứa ":" nhưng không được xét là speaker
+                    if (speakerEnabled && trimmed.includes(":")) {
+                        errors.push(`⚠ Dòng ${index + 1}: chứa ":" nhưng KHÔNG phải dòng đầu block → không tính là speaker.`);
+                    }
+                }
+
+                cleanDialogue.push({ speaker, text: textContent });
+                isStartOfBlock = false;
+            });
+        }
+
+        // -----------------------
+        // Validation system
+        // -----------------------
+        function validateAll() {
+            errors = [];
+
+            document.getElementById("output").textContent = "";
+            const errBox = document.getElementById("errors");
+            errBox.textContent = "";
+
+            if (labels.length === 0) {
+                errors.push("❌ Chưa có Labels.txt");
+            }
+            if (cleanDialogue.length === 0) {
+                errors.push("❌ Chưa có Dialogue.txt");
+            }
+
+            if (errors.length === 0) {
+                if (labels.length > cleanDialogue.length) {
+                    errors.push(`⚠ Labels nhiều hơn thoại (${labels.length} > ${cleanDialogue.length}). ` +
+                        `Sẽ chỉ dùng ${cleanDialogue.length} labels đầu.`);
+                }
+                if (cleanDialogue.length > labels.length) {
+                    errors.push(`⚠ Thoại nhiều hơn labels (${cleanDialogue.length} > ${labels.length}). ` +
+                        `Các câu dư sẽ bị bỏ.`);
+                }
+            }
+
+            // Show errors
+            if (errors.length > 0) {
+                errBox.textContent = errors.join("\n");
+            }
+
+            // Only enable merge when no critical errors
+            const critical = errors.some(e => e.startsWith("❌"));
+            document.getElementById("mergeBtn").disabled = critical;
+        }
+
+        // -----------------------
+        // Merge
+        // -----------------------
+        function mergeFiles() {
+            validateAll();
+            if (document.getElementById("mergeBtn").disabled) return;
+
+            let merged = [];
+
+            const count = Math.min(labels.length, cleanDialogue.length);
+
+            for (let i = 0; i < count; i++) {
+                const d = cleanDialogue[i];
+                merged.push(`${labels[i].start}\t${labels[i].end}\t${d.speaker}\t${d.text}`);
+            }
+
+            emptyLines.forEach(idx => {
+                if (idx <= merged.length) merged.splice(idx, 0, "");
+                else merged.push("");
+            });
+
+            const out = merged.join("\n");
+            document.getElementById("output").textContent = out;
+
+            downloadFile(out, "final.txt");
+        }
+
+        // -----------------------
+        // Download
+        // -----------------------
+        function downloadFile(data, filename) {
+            const blob = new Blob([data], { type: "text/plain" });
+            const url = URL.createObjectURL(blob);
+
+            const a = document.createElement("a");
+            a.href = url;
+            a.download = filename;
+            a.click();
+
+            URL.revokeObjectURL(url);
+        }
+
+        // -----------------------
+        // Init
+        // -----------------------
+        setupDropzone("labelDrop", "labelStatus", parseLabels);
+        setupDropzone("dialogDrop", "dialogStatus", parseDialogue);
+        document.getElementById("mergeBtn").onclick = mergeFiles;
+
+    </script>
 </body>
+
 </html>
